--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-md">
-			<a class="navbar-brand" href="#">麦秸社区</a>
+			<a class="navbar-brand" href="#"><img src="images/logo.png" alt="麦秸社区"  style="max-height:30px" /></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
 				aria-expanded="false" aria-label="Toggle navigation">
@@ -31,6 +31,8 @@
 					</li>
 					<li class="nav-item"><a class="nav-link" href="#">发帖</a></li>
 				</ul>
+				<a href="https://github.com/login/oauth/authorize?client_id=fb39e8e5b381abfec302&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+				&nbsp;
 				<div class="dropdown">
 					<a class="btn btn-secondary dropdown-toggle" href="#" role="button"
 						id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
