--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,18 +31,17 @@
 					</li>
 					<li class="nav-item"><a class="nav-link" href="#">发帖</a></li>
 				</ul>
-				<a href="https://github.com/login/oauth/authorize?client_id=fb39e8e5b381abfec302&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
-				&nbsp;
-				<div class="dropdown">
+				<div class="dropdown" th:if="${session.user != null}">
 					<a class="btn btn-secondary dropdown-toggle" href="#" role="button"
 						id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-						aria-expanded="false"> 用户名 </a>
+						aria-expanded="false" th:text="${session.user.getName()}"> 用户名 </a>
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="#">会员中心</a>
 						<a class="dropdown-item" href="#">发帖</a> 
 						<a class="dropdown-item" href="#">退出</a>
 					</div>
 				</div>
+				<a th:unless="${session.user != null}" class="btn btn-outline-success" href="https://github.com/login/oauth/authorize?client_id=fb39e8e5b381abfec302&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
 			</div>
 		</div>
 	</nav>
